# HashEncryptApp

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/hashencryptapp/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  CryptoUtils.cpp
app/src/main/java/com/example/hashencryptapp/: MainActivity.kt
app/src/main/java/com/example/hashencryptapp/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/hashencryptapp/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
